<resources>

    <string name="app_name">AvyAlert</string>
    
	<string name="danger1">Natural avalanches very unlikely. Skier-triggered avalanches unlikely.  Generally stable snow. Isolated areas of instability.  Travel is generally safe. Normal caution advised.</string>
	<string name="danger2">"Natural avalanches unlikely. Skier-triggered avalanches possible.  Unstable slabs possible on steep terrain.  Use caution in steeper terrain on certain aspects.</string>
	<string name="danger3">"Natural avalanches possible. Skier-triggered avalanches probable.  Unstable slabs probable on steep terrain.  Be increasingly cautious in steeper terrain.</string>
	<string name="danger4">"Natural and human triggered avalanches likely.  Unstable slabs likely on a variety of aspects and slope angles.  Travel in avalanche terrain is not recommended. Safest travel on windward ridges of lower angle slopes without steeper terrain above.</string>
	<string name="danger5">"Widespread natural or human triggered avalanches certain.  Extremely unstable slabs certain on most aspects and slope angles. Large destructive avalanches possible.  Travel in avalanche terrain should be avoided and travel confined to low angle terrain well away from avalanche path run-outs.</string>

    <string name="default_region_data" formatted="true">
[
 {	\"regionName\": \"Eastern Sierra\",
	\"centerName\": \"Eastern Sierra Avalanche Center\",
	\"bannerUrl\": \"http://platypiiindustries.com/AvyAlert/regions/easternsierra.jpg\",
	\"advisoryUrl\": \"http://esavalanche.org/advisory\",
	\"dateSelector\": \"div.forecast-advisory strong:eq(0)\",
	\"ratingSelector\": \"div.forecast-advisory .rating div:eq(0)\",
	\"roseSelector\": \"\",
	\"detailsSelector\": \"div.forecast-advisory\",
	\"latitude\": 37.630628,
	\"longitude\": -119.032625 },

 {	\"regionName\": \"Lake Tahoe\",
	\"centerName\": \"Sierra Avalanche Center\",
	\"bannerUrl\": \"http://platypiiindustries.com/AvyAlert/regions/laketahoe.jpg\",
	\"advisoryUrl\": \"http://sierraavalanchecenter.org/advisory\",
	\"dateSelector\": \"div.content table strong:eq(0)\",
	\"ratingSelector\": \"div.content table a[href=http://avalanche.org/danger_card.php]\",
	\"roseSelector\": \"div.content table a[href=http://avalanche.state.co.us/pub/fx_danger_rose.php]\",
	\"detailsSelector\": \"div.content table\",
	\"latitude\": 39.091667,
	\"longitude\": -120.041667 },

 {	\"regionName\": \"Mount Shasta\",
	\"centerName\": \"Mount Shasta Avalanche Center\",
	\"bannerUrl\": \"http://platypiiindustries.com/AvyAlert/regions/shasta.jpg\",
	\"advisoryUrl\": \"http://shastaavalanche.org/advisories/advisories/avalanche-advisory\",
	\"dateSelector\": \"table.contentpaneopen strong\",
	\"ratingSelector\": \"table.contentpaneopen .rating div\",
	\"roseSelector\": \"\",
	\"detailsSelector\": \"table.contentpaneopen\",
	\"latitude\": 41.409196,
	\"longitude\": -122.194888 }
  ]
	</string>
    
	<!-- In-App Billing -->
	<string name="billing_not_supported_title">Can\'t make purchases</string>
	<string name="billing_not_supported_message">The Market billing service is not available at this time.  You can continue to use this app but you won\'t be able to make purchases.</string>
	<string name="cannot_connect_title">Can\'t connect to Market</string>
	<string name="cannot_connect_message">This app cannot connect to Market. Your version of Market may be out of date. You can continue to use this app but you won\'t be able to make purchases.</string>
	<string name="restoring_transactions">Restoring transactions</string>
	<string name="buy">Buy</string>
	<string name="upgrade">Upgrade</string>
	 
	<!-- The following are reserved skus defined by Market for testing. -->
	<string name="android_test_canceled">android.test.canceled</string>
	<string name="android_test_purchased">android.test.purchased</string>
	<string name="android_test_item_unavailable">android.test.item unavailable</string>
	<string name="android_test_refunded">android.test.refunded</string>
	<string name="learn_more">Learn more</string>
	<string name="select_item">Select an item</string>
	<string name="edit_payload">Edit Payload</string>
	<string name="edit_payload_title">Edit the developer payload associated with this purchase</string>
	<string name="edit_payload_accept">Set</string>
	<string name="edit_payload_clear">No Payload</string>
	<string name="items_for_sale">Items for sale</string>
	<string name="items_you_own">Items you own</string>
	<string name="recent_transactions">Recent activity</string>
    
</resources>